AlbumDetails.css: Fix nissing margins on mobile

--- a/src/components/pages/AlbumDetails.css
+++ b/src/components/pages/AlbumDetails.css
@@ -1,3 +1,6 @@
+.main {
+  margin: 2rem 1rem;
+}
 .main form {
   max-width: 24rem;
   margin: 0 auto;
